# cocapn-marine

./: AGENT.md  API_REFERENCE.md  ARCHITECTURE.md  Cargo.toml  GETTING_STARTED.md  LOW_LEVEL.md  PLUG_AND_PLAY.md  README.md
memory/: JOURNAL.md
src/: autopilot.rs  bathy.rs  deadband.rs  lib.rs  nmea.rs  sensor.rs
